<resources>
    <string name="app_name">Book Store</string>

    <!--Catalog Activity-->
    <string name="label_price">Price:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="save_item">Save item</string>
    <string name="sale">Sale</string>
    <string name="delete_item">Delete item</string>
    <string name="empty_view_text">Tap Add button to add new items.</string>

    <!--Edit & Details Activity-->
    <string name="activity_title_add">Add new item</string>
    <string name="activity_title_edit">Edit item</string>
    <string name="header_book">Book info</string>
    <string name="header_supplier">Supplier info</string>
    <string name="category_name">Title</string>
    <string name="category_name_hint">Title</string>
    <string name="category_price">Price</string>
    <string name="category_price_hint">Price ($)</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_quantity_hint">0</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_supplier_hint">Supplier</string>
    <string name="category_supplier_phone">Supplier phone</string>
    <string name="category_supplier_phone_hint">X XXX XX XX</string>

    <!--Menu-->
    <string name="catalog_add_item_menu">Add item</string>
    <string name="catalog_test_data_menu">Insert test data</string>
    <string name="catalog_delete_data_menu">Delete all data</string>
    <string name="edit_delete_item_menu">Delete item</string>
    <string name="details_edit_item_menu">Edit item</string>

    <!--Toasts-->
    <string name="toast_added_success">Item added successfully</string>
    <string name="toast_added_failed">Something went wrong. Item was not added</string>
    <string name="toast_edited_success">Item updated successfully</string>
    <string name="toast_edited_failed">Unable to update current item</string>
    <string name="toast_delete_success">Item deleted</string>
    <string name="toast_delete_failed">Error with deleting item</string>
    <string name="toast_invalid_quantity">Please enter positive number</string>
    <string name="toast_invalid_phone">Please enter phone number</string>

    <!--Alerts-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--Exceptions-->
    <string name="invalid_name">Name is empty or invalid</string>
    <string name="invalid_price">Price is empty or negative</string>
    <string name="invalid_quantity">Quantity is empty or negative</string>
    <string name="invalid_supplier">Supplier is empty or invalid</string>
    <string name="invalid_supplier_phone">Phone is empty or invalid</string>
</resources>
