<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_16">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/details_name"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:text="Book title" />

        <TextView
            android:id="@+id/details_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            tools:text="Price" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_8">

        <TextView
            android:id="@+id/details_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/dp_8"
            android:text="@string/category_quantity"
            tools:text="Quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/details_quantity_label"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="-" />

            <EditText
                android:id="@+id/details_edit_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/category_quantity_hint"
                android:inputType="number"
                android:maxLength="6" />

            <Button
                android:id="@+id/increase_quantity"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="+" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_8">

        <TextView
            android:id="@+id/details_supplier_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dp_8"
            android:text="@string/category_supplier"
            tools:text="Supplier" />

        <TextView
            android:id="@+id/details_supplier"
            style="@style/TertiaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Supplier name" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_8">

        <TextView
            android:id="@+id/details_supplier__phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dp_8"
            android:text="@string/category_supplier_phone"
            tools:text="Supplier phone" />

        <TextView
            android:id="@+id/details_supplier__phone"
            style="@style/TertiaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/details_supplier__phone_label"
            android:paddingRight="@dimen/dp_8"
            tools:text="1 234 56 78" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/details_supplier__phone"
            android:src="@drawable/ic_phone_grey600_24dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/details_delete_item"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_item" />
</LinearLayout>